# allotropy

./: .flake8  .gitattributes  .gitignore  .python-version  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  ED_Fig.1a_B2 binding.json  GOVERNANCE.md  LICENSE  LICENSE.txt  OPTIMIZATION_SUMMARY.md  README.md  SUPPORTED_INSTRUMENT_SOFTWARE.adoc  luminex_xPONENT_example05_ref.json  mypy.ini  pyproject.toml  ruff.toml
.claude/: .ruff.toml
.claude/skills/parser-generator/: README.md  skill.md
.github/codeql/: default-config.yml
.github/workflows/: approve_exempted_files.yml  codeql.yml  publish-package-prod.yaml  publish-package-staging.yaml  publish-package.yaml  test.yml
docs/: tutorial.md
docs/parser_requirements/: agilent_tapestation_analysis_req.html  beckman_pharmspec_req.html  chemometec_nucleoview_req.html  luminex_xponent_req.html  mabtech_apex_req.html  novabio_flex2_req.html  perkinelmer_envision_req copy.html  revvity_matrix_req.html  thermo_fisher_nanodrop_one_req.html  thermo_fisher_skanit_req.html
docs/parser_requirements/Beckman Coulter Biomek/: BeckmanCoulterBiomekLiquidHandlerAdapterRequi.html
docs/parser_requirements/CFX Maestro/: CFXMaestroqPCRAdapterRequirements.html
docs/parser_requirements/Cytiva Unicorn/: UnicornHPLCAdapterRequirements.html
docs/parser_requirements/MSD Workbench/: MSDDiscoveryWorkbenchPlateReaderAdapterRequir.html
docs/parser_requirements/Tecan Magellan/: TecanMagellanPlateReaderAdapterRequirements.html
docs/parser_requirements/agilent_gen5/: agilent_gen5_reg.html
docs/parser_requirements/agilent_gen5_image/: agilent_gen5_image_req.html
docs/parser_requirements/agilent_openlab_cds/: agilent_openlab_cds_req.html
docs/parser_requirements/appbio_absolute_q/: ThermoFisherScientificAbsoluteQdPCRAdapterReq.html  appbio_absolute_q_req.html
docs/parser_requirements/appbio_quantstudio_designandanalysis/: appbio_quantstudio_designandanalysis_req.html
docs/parser_requirements/appbio_quantstudio_rt_pcr/: ThermoFisherScientificQuantStudioRTPCRqPCRAda.html  appbio_quantstudio_rt_pcr_req.html
docs/parser_requirements/bd_biosciences_facsdiva/: bd_biosciences_facsdiva_req.html
docs/parser_requirements/bd_biosciences_flowjo/: bd_biosciences_flowjo_req.html
docs/parser_requirements/beckman_vi_cell_blu/: beckman_vi_cell_blu_req.html
docs/parser_requirements/beckman_vi_cell_xr/: beckman_vi_cell_xr_req.html
docs/parser_requirements/benchling_chromeleon/: thermo_fisher_chromeleon_req.html
docs/parser_requirements/benchling_empower/: benchling_empower_req.html
docs/parser_requirements/biorad_bioplex_manager/: biorad_bioplex_manager_req.html
docs/parser_requirements/bmg_mars/: bmg_mars_req.html
docs/parser_requirements/bmg_smart_control/: bmg_labtech_smart_control_req.html
docs/parser_requirements/ctl_immunospot/: ctl_immunospot_req.html
docs/parser_requirements/cytiva_biacore_t200_control/: cytiva_biacore_t200_control_req.html
docs/parser_requirements/cytiva_unicorn/: cytiva_unicorn_req.html
docs/parser_requirements/moldev_softmax_pro/: moldev_softmax_pro_req.html
docs/parser_requirements/msd_methodical_mind/: msd_methodical_mind_req.html
docs/parser_requirements/novabio_flex2/: novabio_flex2_req.html
docs/parser_requirements/qiagen_qiacuity/: qiagen_qiacuity_req.html
docs/parser_requirements/revvity_kaleido/: revvity_kaleido_req.html
docs/parser_requirements/roche_cedex_bioht/: roche_cedex_bioht_req.html
docs/parser_requirements/roche_cedex_hires/: roche_cedex_hires_req.html
docs/parser_requirements/thermo_fisher_genesys30/: thermo_fisher_genesys30_req.html
docs/parser_requirements_templates/: template_binding_affinity_analyzer_requirements.html  template_cell_counting_requirements.html  template_dPCR_parser_requirements.html  template_electrophoresis_requirements.html  template_flow_cytometry_requirements.html  template_light_obscuration_requirements.html  template_liquid_chromatography_requirements.html  template_multi_analyte_profiling_requirements.html  template_plate_reader_parser_requirements.html  template_qPCR_parser_requirements.html  template_solution_analyzer_parser_requirements.html  template_spectrophotometry_parser_requirements.html
scripts/: build_all.py  check_changelog  check_title  check_warn_unread.py  convert_weyland_yutani_to_dataframe.py  create_parser.py  csv_as_json.py  download_schema.py  generate_dummy_data_from_mapper.py  generate_fake_json_from_dataclasses.py  generate_schemas.py  generate_weyland_yutani.py  optimize_batch1.py  optimize_batch2.py  optimize_test_files.py  optimize_test_files_batch.py  pre-push-hook  publish_all.py  update_readme.py  update_supported_instruments_table.py  update_version.py  visualization.py
scripts/dev/: bootstrap  generate_schemas.py  setup-pre-push-hook
scripts/parser_templates/: parser_template
scripts/templates/: constants_template  parser_template  reader_template  structure_template  test_template
src/: agile_gen5_multiple_read_modes.json  jira_cust_8062_bug.json  main.py  testingMain.py
src/allotropy/: __about__.py  constants.py  exceptions.py  named_file_contents.py  parser_factory.py  to_allotrope.py  to_dataset.py  types.py
src/allotropy/allotrope/: allotrope.py  (+5 more)
testdata/: README.md  pyproject.toml
testdata/src/allotropy_testdata/: __init__.py  registry.py
tests/: __init__.py  conftest.py  discover_vendor_test.py  exceptions_test.py  parser_factory_test.py  test_id_generator.py  to_allotrope_locale_test.py  to_allotrope_test.py  to_dataset_test.py
tests/allotrope/: allotrope_test.py  converter_test.py  pandas_util_test.py  path_util_test.py  schemas_test.py
tests/json_to_csv/: json_to_csv_dataset_test.py  json_to_csv_test.py  mapper_config_test.py
tests/parsers/: lines_reader_test.py  test_utils.py  vendor_parser_test.py
tests/schema_gen/: test_codegen.py  test_fetcher.py  test_generate.py  test_generate_unit.py  test_model_validation.py  test_naming.py  test_serializer.py  test_technique_resolver.py  test_v2_model_validation.py
visualization/: main.py
visualization/parsers/: parser.py  pcr.py
(+2157 files in other folders)
